# PySparkDataproc

./: .gitignore  Dockerfile  README.md  build_dist.sh  build_image.sh  main.py  pyproject.toml  register_package.sh  submit_job.sh
docs/: big-query-data
flight_utils/: spark.py
src/: main.py
src/flight_utils/: demo.py  spark.py
